# clean-robot

./: Makefile  README.md  gpt.py  last.py  main.py  pyproject.toml  t.py  test.py
flet/: button.py  div.py  entry.py  home.py  main.py  position.py  test2.py
src/backend/: old.py
src/backend/constants/: main.py
src/backend/funcs/: base.py  board.py  position.py  search.py
src/frontend/: app.py
src/frontend/components/: board.py  button.py  div.py  entry.py  frame.py  label.py
src/frontend/configs/: position.py
src/frontend/pages/: board.py  cleaning.py  home.py  management.py  robot.py
src/frontend/styles/: button.py  entry.py  frame.py  label.py  page.py
src/frontend/styles/colors/: button.py  entry.py  label.py  page.py
src/frontend/styles/configs/: position.py  size.py
src/frontend/styles/fonts/: label.py
